# SysY-Compiler

./: .gitignore  README.md  compiler
codes/2023/10-Third-UESTC (Rust)/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  generate_return.sh  res  stat.sh  test.sh  test_all.sh  test_res
codes/2023/10-Third-UESTC (Rust)/scripts/: ci_functional_test.sh  ci_performance_test.sh  clean_dir_by_suffix.sh  gen_dom.sh  gen_llvm_ir.sh  gen_llvm_mem2reg.sh  gen_my_asm.sh  gen_my_ir.sh  gen_my_mem2reg.sh  gen_my_optimize.sh  syfile2cfile.sh  syfile2tmp.sh  tmp2origin.sh  tmp2syfile.sh
codes/2023/10-Third-UESTC (Rust)/src/: compiler.rs  lib.rs  sysy-dominance.rs  sysy-frontend.rs  sysy-mem2reg.rs  sysy-optimize.rs
codes/2023/12-Third-NUDT (C++)/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  formatting.cmake
codes/2023/12-Third-NUDT (C++)/src/: CMakeLists.txt  main.cpp
codes/2023/12-Third-NUDT (C++)/test/: CMakeLists.txt  test.cpp
codes/2023/21-Excellence-NJU (C++)/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  SysYLexer.g4  SysYParser.g4
codes/2023/21-Excellence-NJU (C++)/SysYLexer/: SysYLexer.cpp  SysYLexer.h  SysYLexer.interp
codes/2023/21-Excellence-NJU (C++)/SysYParser/: SysYParser.cpp  SysYParser.h  SysYParser.interp  SysYParser.tokens  SysYParserBaseListener.cpp  SysYParserBaseListener.h  SysYParserBaseVisitor.cpp  SysYParserBaseVisitor.h  SysYParserListener.cpp  SysYParserListener.h  SysYParserVisitor.cpp  SysYParserVisitor.h
codes/2023/21-Excellence-NJU (C++)/cmake/: Antlr4Package.md  ExternalAntlr4Cpp.cmake  README.md
codes/2023/21-Excellence-NJU (C++)/include/: BasicBlock.h  Builder.h  Function.h  GlobalUnit.h  IRInstruction.h  Instruction.h  LLVM.h  MyVisitor.h  Scope.h  Type.h  Utils.h  ValueRef.h
codes/2023/21-Excellence-NJU (C++)/src/: BasicBlock.cpp  Builder.cpp  Function.cpp  GlobalUnit.cpp  IRInstruction.cpp  LLVM.cpp  MyVisitor.cpp  README.md  Scope.cpp  Type.cpp  Utils.cpp  ValueRef.cpp  main.cpp  sylib_utils.cpp
codes/2023/22-Excellence-SCUJJ (C)/: .clang-format  CMakeLists.txt  README.md
codes/2023/22-Excellence-SCUJJ (C)/src/: main.c
codes/2023/23-Excellence-TYUT (C++)/: .gitignore  CMakeLists.txt  note.txt
codes/2023/23-Excellence-TYUT (C++)/antlr/: Lex.cpp  Lex.h  Lex.interp  Lex.tokens  Sysy.interp  SysyLexer.cpp  SysyLexer.h  SysyLexer.interp  SysyLexer.tokens  SysyParser.cpp  SysyParser.h  SysyVisitor.cpp  SysyVisitor.h
codes/2023/23-Excellence-TYUT (C++)/src/: main.cpp
codes/2023/7-Second-USTC (C++)/: CMakeLists.txt  Makefile  README.md  easy_test.sh  final_log.txt
codes/2023/7-Second-USTC (C++)/perf/: readme.md
codes/2023/7-Second-USTC (C++)/scripts/: asm_test.py  cfg_visualize.py  gen_rv64asm_by_llc.py  ir_test.py  opt_compare.py  scan_asm_insts.py  scan_ir_insts.py
codes/2023/7-Second-USTC (C++)/src/: main.cc
codes/2024/14-Third-USTC-100-36-53 (C++)/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
codes/2024/14-Third-USTC-100-36-53 (C++)/docs/: how_init_val_works.py  structure.dot  time.dot  文法.md
codes/2024/14-Third-USTC-100-36-53 (C++)/src/: CMakeLists.txt
codes/2024/14-Third-USTC-100-36-53 (C++)/tests/: clang_test.sh  cleanup.sh  get_time.py  remote.sh  remote_test.py  test_func.sh  test_perf.sh
codes/2024/16-Third-NJU-100-33-51 (C++)/: .gitignore  CMakeLists.txt  Makefile  README.md
codes/2024/16-Third-NJU-100-33-51 (C++)/docs/: AntlrUsages.md  IRUsages.md
codes/2024/16-Third-NJU-100-33-51 (C++)/parser/: CMakeLists.txt  SysYParser.g4  SysYParser.interp  SysYParserBaseListener.cpp  SysYParserBaseListener.h  SysYParserBaseVisitor.cpp  SysYParserBaseVisitor.h  SysYParserLexer.cpp  SysYParserLexer.h  SysYParserLexer.interp  SysYParserLexer.tokens  SysYParserListener.cpp  SysYParserListener.h  SysYParserParser.cpp  SysYParserParser.h  SysYParserVisitor.cpp  SysYParserVisitor.h
codes/2024/16-Third-NJU-100-33-51 (C++)/src/: main.cc
codes/2024/21-Third-WHU-100-27-47 (C++)/: .clang-format  .gitignore  CMakeLists.txt  README.md  设计分析文档.md
codes/2024/21-Third-WHU-100-27-47 (C++)/src/: main.cpp
codes/2024/21-Third-WHU-100-27-47 (C++)/sysy_runtime/: README.md
codes/2024/21-Third-WHU-100-27-47 (C++)/test_cases/: case1.sy  case10.sy  case11.sy  case12.sy  case13.sy  case15.sy  (+10 more)
codes/2024/25-Excellence-BNU-99-21-43 (C++)/: .gitignore  CMakeLists.txt
codes/2024/31-Excellence-HFUT-100-12-36 (C++)/: .gitignore  CMakeLists.txt
codes/2025/11-Third-OUC-100-43-55 (C++)/: .clang-format  .gitignore  CMakeLists.txt  README.md
codes/2025/16-Third-ECNU-100-32-47 (C++)/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
codes/2025/17-Third-NUDT-99-30-45 (C++)/: .gitignore  CMakeLists.txt  Pass_ID_List.md  README.md  olddef.h  setup.sh
codes/2025/2-First-Beihang-100-72-78 (C++)/: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
codes/2025/21-Third-NJUPT-98-26-42 (Rust)/: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
codes/2025/23-Excellence-HUST-100-22-39 (C++)/: .gitignore  CMakeLists.txt  README.md
codes/2025/26-Excellence-Beihang-99-18-36 (C++)/: .clang-format  CMakeLists.txt  format.sh  readme.md
codes/2025/27-Excellence-UESTC-92-0-20 (C++)/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.py
codes/2025/6-Second-UESTC-100-56-66 (C++)/: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/asm/: AsmEmitter.cpp  AsmEmitter.h  README.md  sylib.s
src/codegen/: CodeGen.cpp  CodeGen.h  Defs.cpp  Defs.h  IRDumper.cpp  IRDumper.h  Ops.h
src/codegen/testc/: arr_defn3.ll  defn2.ll  h_branch.c  h_branch.ll  h_json.c  h_json.ll
src/frontend/: AST.cpp  AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTDumper.cpp  ASTDumper.h  Interpreter.cpp  Interpreter.h  SemanticAnalysis.cpp  SemanticAnalysis.h  SysYLexer.g4  SysYParser.g4
src/lib/: README.md  lib.c  lib.h
src/opt/: opt.md
src/scripts/: README.md  asm_test.sh  ast_diff.sh  test.sh
(+11087 files in other folders)
