[package]
name = "sysycc-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]

log = "0.4"
getset = "0.1.2"
derive-new = "0.5.9"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
eyre = "0.6.8"
itertools = "0.10.5"
defaults = "0.2.0"
enum-as-inner = "0.5.1"
hexf-parse = "0.2.1"
structopt = "0.3.26"
enum_dispatch = "0.3.11"
env_logger = "0.9"
antlr-rust = "0.3.0-beta"

# [[bin]]
# name = "sysy-frontend"
# path = "./src/sysy-frontend.rs"

# [[bin]]
# name = "sysy-dominance"
# path = "./src/sysy-dominance.rs"

# [[bin]]
# name = "sysy-optimize"
# path = "./src/sysy-optimize.rs"

# [[bin]]
# name = "sysy-mem2reg"
# path = "./src/sysy-mem2reg.rs"

[[bin]]
name = "compiler"
path = "./src/compiler.rs"


[profile.release]
opt-level = 3
debug = true