[workspace]
resolver = "3"
members = [
    "compiler",
    "crates/isle/isle",
    "crates/isle/islec",
    "crates/cranelift-srcgen",
    "crates/cranelift-codegen-shared",
    "crates/cranelift-codegen-meta",
    "crates/simple-compiler",
]
default-members = ["compiler"]

[workspace.package]
authors = ["NKID00", "zmr-233", "lux-QAQ", "aurora0x27"]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Original dependencies
enum-map = "2.7.3"
id-arena = "2.2.1"
typed-arena = "2.0.2"

# Core dependencies from crates
codespan-reporting = "0.11.1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
heck = "0.5.0"

# Development dependencies
tempfile = "3"

# Cranelift internal dependencies
cranelift-isle = { path = "crates/isle/isle" }
cranelift-srcgen = { path = "crates/cranelift-srcgen" }
cranelift-codegen-shared = { path = "crates/cranelift-codegen-shared" }
cranelift-codegen-meta = { path = "crates/cranelift-codegen-meta" }


[workspace.lints.rust]
missing_docs = "warn"

[profile.profiling]
inherits = "release"
debug = 2
