add_library(
        parser
        SysYParserParser.cpp
        SysYParserParser.h
        SysYParserBaseListener.h
        SysYParserBaseListener.cpp
        SysYParserBaseVisitor.cpp
        SysYParserBaseVisitor.h
        SysYParserLexer.cpp
        SysYParserLexer.h
        SysYParserListener.cpp
        SysYParserListener.h
        SysYParserParser.cpp
        SysYParserParser.h
        SysYParserVisitor.h
        SysYParserVisitor.cpp
)